Fixed Title animation (Savantium was not showing up)

--- a/css/style.css
+++ b/css/style.css
@@ -368,7 +368,7 @@ p {
     animation-delay: .87s;
 }
 #title h1:nth-child(2){
-    animation: text_reveal_name .5s ease forwards;
+    /* animation: text_reveal_name .5s ease forwards; */
     animation-delay: 1.9s;
 }
 
